--- a/scss/_single-ferry-cards.scss
+++ b/scss/_single-ferry-cards.scss
@@ -105,6 +105,7 @@
         flex-wrap: wrap;
         justify-content: center;
         gap: 0 1rem;
+        margin: 0;
         a {
             width: 17.5rem;
         };
@@ -113,7 +114,7 @@
 
 @media (min-width: 1300px) {
     #ferry-cards {
-        gap: 1.05rem;
+        gap: 0 1.05rem;
         a {
             width: 17.3rem;
         }
