--- a/scss/_single-terminal-cards.scss
+++ b/scss/_single-terminal-cards.scss
@@ -66,6 +66,7 @@
         flex-wrap: wrap;
         justify-content: center;
         gap: 0 1rem;
+        margin: 0;
         a {
             width: 17.5rem;
         };
@@ -74,7 +75,7 @@
 
 @media (min-width: 1300px) {
     #terminal-cards {
-        gap: 1.05rem;
+        gap: 0 1.05rem;
         a {
             width: 17.3rem;
         }
